terraform/infra/kubernetes/test-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: task-tracker-app
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: task-tracker-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: myapp
  replicas: 4
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myapp
    spec:
      containers:
      - name: myapp
        image: foxy7887/task-tracker-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: task-tracker-app
  name: service-task-tracker-app
spec:
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: myapp
---
