terraform/infra/kubernetes/ingress.yaml
# Ingress exposes HTTP and HTTPS routes from outside the cluster to services within the cluster. Traffic routing is controlled by rules defined on the Ingress resource.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: task-tracker-app
  name: ingress-task-tracker-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-task-tracker-app
              port:
                number: 80
